--- a/assets/css/nav/nav.css
+++ b/assets/css/nav/nav.css
@@ -1,16 +1,44 @@
-*{
+* {
   margin: 0;
 }
-nav{
+
+nav {
   width: 100%;
-  height: 3.75%;
-  background-color: grey;
+  height: 112px;
+  filter: opacity(100%);
+  position: fixed;
 }
 
-nav .logoNav{
+nav .logoNav {
   width: 64px;
+  float: left;
+  position: absolute;
+  top: 30%;
 }
 
-nav .navLista{
+nav .navLista {
   list-style: none;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.navFloat {
+  float: right;
+  padding: .75rem 1.25rem;
+  margin-top: 35px;
+  margin-left: 10px;
+  font-size: 1.125rem;
+  font-family: Gotham SSm A,Gotham SSm B,HelveticaNeue,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
+  color: white;
+}
+
+.navLista:hover {
+  color: #FF006F;
+}
+
+.bordeElementoNav {
+  border: 1px solid white;
+  border-radius: 10%;
+  padding: .75rem .75rem;
+  margin-right: 15px;
 }
