Definí primero estilos de header

--- a/assets/css/header/header.css
+++ b/assets/css/header/header.css
@@ -47,7 +47,7 @@ form{
   font-family: 'Helvetica';
   font-size: 2em;
   margin-left:2%;
-  margin-top: 2%;
+  margin-top: 2%¿'pl0ooñl'
 }
 #tituloFormDos{
   color:#6f268b;
