agregamos nav sobre todas las cosas

--- a/assets/css/nav/nav.css
+++ b/assets/css/nav/nav.css
@@ -1,12 +1,14 @@
 * {
   margin: 0;
 }
+#nav {
 
-nav {
   width: 100%;
   height: 112px;
   filter: opacity(100%);
   position: fixed;
+  z-index: 1;
+
 }
 
 nav .logoNav {
@@ -14,12 +16,15 @@ nav .logoNav {
   float: left;
   position: absolute;
   top: 30%;
+  left: 7%;
+
 }
 
 nav .navLista {
   list-style: none;
   display: inline-block;
   cursor: pointer;
+
 }
 
 .navFloat {
@@ -41,4 +46,5 @@ nav .navLista {
   border-radius: 10%;
   padding: .75rem .75rem;
   margin-right: 15px;
+  clear: left;
 }
