--- a/assets/css/nav/nav.css
+++ b/assets/css/nav/nav.css
@@ -1,14 +1,9 @@
-* {
-  margin: 0;
-}
 #nav {
-
   width: 100%;
   height: 112px;
   filter: opacity(100%);
   position: fixed;
   z-index: 1;
-
 }
 
 nav .logoNav {
@@ -17,14 +12,12 @@ nav .logoNav {
   position: absolute;
   top: 30%;
   left: 7%;
-
 }
 
 nav .navLista {
   list-style: none;
   display: inline-block;
   cursor: pointer;
-
 }
 
 .navFloat {
@@ -33,7 +26,7 @@ nav .navLista {
   margin-top: 35px;
   margin-left: 10px;
   font-size: 1.125rem;
-  font-family: Gotham SSm A,Gotham SSm B,HelveticaNeue,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
+  font-family: Helvetica, sans-serif;
   color: white;
 }
 
