--- a/assets/css/nav/nav.css
+++ b/assets/css/nav/nav.css
@@ -2,15 +2,17 @@
   margin: 0;
 }
 #nav {
-
   width: 100%;
   height: 112px;
-  filter: opacity(100%);
   position: fixed;
   z-index: 1;
+  background-color: grey;
+  opacity: 0%;
 
 }
-
+#sign{
+  filter: opacity(100%);
+}
 nav .logoNav {
   width: 64px;
   float: left;
