--- a/assets/css/nav/nav.css
+++ b/assets/css/nav/nav.css
@@ -3,8 +3,8 @@
   height: 112px;
   position: fixed;
   z-index: 1;
-  background-color: grey;
-  opacity: 0%;
+  background-color: none;
+
 
 }
 #sign{
