--- a/assets/css/header/header.css
+++ b/assets/css/header/header.css
@@ -25,8 +25,7 @@ form{
 
 }
 #seccion-header{
- background-color: #6f268b
-;
+ background-color: #6f268b;
  padding-top: 0;
  width: 100%;
  height: 16.5%;
@@ -57,7 +56,8 @@ form{
   font-family: 'Helvetica';
   font-size: 3em;
   margin-left:13%;
-  padding-top: 13%;
+  padding-top: 0;
+  margin-top: -5%;
 }
 #tituloFormDos{
   color:#6f268b;
