Agregando el video y verificando la visibilidad

--- a/assets/css/videos/videos.css
+++ b/assets/css/videos/videos.css
@@ -95,7 +95,12 @@ body {
   float: right;
   clear: both;
 }
+.reproductorVideo
+{
+  width: 95%;
+  height: 100%
 
+}
 .imagenVideos2 {
   float: left;
   clear: both;
