--- a/assets/css/videos/videos.css
+++ b/assets/css/videos/videos.css
@@ -99,7 +99,13 @@ body {
 {
   width: 95%;
   height: 100%
-
+}
+.reproductorVideo2
+{
+  width: 95%;
+  height: 100%
+  float: left;
+  clear: both;
 }
 .imagenVideos2 {
   float: left;
