--- a/assets/css/footer/footer.css
+++ b/assets/css/footer/footer.css
@@ -110,8 +110,9 @@
 }
 .Icons{
  position:absolute;
- margin:30%;
- margin-top: 700px;
+ left: 35%;
+ bottom: 6%;
+
 }
 .classList5{
  display: inline-block;
