--- a/assets/css/header/header.css
+++ b/assets/css/header/header.css
@@ -26,7 +26,7 @@ body{
   font-size: 3em;
   margin-left:13%;
   padding-top: 15%;
-  margin-top: -5%; 
+  margin-top: -5%;
 }
 
 .titulo-formulario h2{
@@ -42,12 +42,16 @@ body{
   font-family:'Helvetica';
   margin-left: 13%;
   border: none;
-  text-decoration: underline;
   border-bottom: 1px solid #000;
   width: 80%;
   padding-top: 8%;
 
 }
+
+.entradaForm:focus{
+  outline:0;
+}
+
 .entradaCity{
   margin-left: 13%;
   padding-top: 8%;
@@ -105,27 +109,6 @@ body{
   width: 80%;
   font-size: 13px;
   font-family:'Helvetica';
-  margin-left: 13%; 
+  margin-left: 13%;
   color: #848484;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
-
-
