Agregué imagen del ícono de play sobre las imágenes del video

--- a/assets/css/videos/videos.css
+++ b/assets/css/videos/videos.css
@@ -100,6 +100,7 @@ body {
   width: 95%;
   height: 500px;
 }
+
 .reproductorVideo2
 {
   width: 95%;
@@ -107,7 +108,21 @@ body {
   float: left;
   clear: both;
 }
-.imagenVideos2 {
+.imagenVideosIzquierda {
   float: left;
   clear: both;
+}
+
+.videoPlayDerecha{
+  width: 7%;
+  position: absolute;
+  margin-top: 16%;
+  margin-left: 34%;
+}
+
+.videoPlayIzquierda{
+  width: 7%;
+  position: absolute;
+  margin-top: 16%;
+  margin-left: 28%;
 }
