arreglado cambio de color de letras de rojo a blanco, del nav

--- a/assets/css/nav/nav.css
+++ b/assets/css/nav/nav.css
@@ -34,7 +34,7 @@ nav .navLista {
   margin-left: 10px;
   font-size: 1.125rem;
   font-family: Helvetica, sans-serif;
-  color: red;
+  color: white;
 }
 
 .navLista:hover {
