--- a/assets/css/header/header.css
+++ b/assets/css/header/header.css
@@ -3,9 +3,13 @@ body{
   height:100%;
 }
 
+#header{
+  /*z-index: 1;*/
+  height: 18%;
+}
 #video-header{
   position: relative;
-  height:16.5%;
+  height:18%;
   width:100%;
   float:left;
 }
@@ -24,33 +28,68 @@ form{
 
 
 }
+
 #seccion-header{
- background-color: #6f268b;
- padding-top: 0;
+ /*position: relative;*/
+ bottom: 5px;
+ /*z-index: -1;*/
+ background-image: linear-gradient(to bottom, #6b1d86, #6b1d86 60%, #2e1e67);
  width: 100%;
  height: 16.5%;
 }
 .contenedor-Parrafos{
  position: relative;
- width: 50%
- height: 16.5%;
+ width: 50%;
+ height: 850px;
  margin-left:10%;
- padding-top: 5%;
+ padding-top: 10%;
+ padding-bottom: 30%;
  float: left;
  color: white;
 }
  .contenedor-Parrafos p{
  color: white;
- margin-bottom: 10%
+ width: 100%;
+ font-size: 1.3em;
+ font-stretch: ultra-condensed;
+ font-family: 'Roboto', sans-serif;
+ margin-bottom: 10%;
+
+}
+.contenedor-Parrafos h3{
+  font-family: Helvetica;
+  font-size: 25px;
+  padding-right: 10%;
+
+}
+.ultimoParrafoHeader{
+  padding-bottom: 20%;
 }
  .contenedor-phone{
  position: relative;
  width: 50%;
- height: 16.5%;
+ height: 1000px;
+ margin-top: 10%;
  margin-left: 50%;
- padding-top: 5%;}.fotoPhone{
+ padding-top: 30%;
+}
+
+ .fotoPhone{
+ padding-top: 100px;
  height: 400px;
 }
+
+/*.complementoFormulario{
+  position:absolute;
+  display:block;
+  width:100%;
+  background-color: red;
+  float:left;
+  z-index: 1;
+  top:8%;
+  height:120px;
+  background: linear-gradient(to bottom, #6b1d86, #6b1d86 90%, #2e1e67);
+}*/
 #tituloForm{
   color: #6f268b;
   font-family: 'Helvetica';
