Agrega video, errores en el 2 y 3

--- a/assets/css/videos/videos.css
+++ b/assets/css/videos/videos.css
@@ -61,7 +61,18 @@ body {
   margin-left: 5%;
 
 }
-
+.play{
+  width: 95%;
+  float: right;
+  clear: both;
+  height: 500px;
+}
+.playIzquierda{
+  width: 95%;
+  float: left;
+  clear: both;
+  height: 500px;
+}
 .contenedorImagenVideo {
   width: 70%;
   height: 100%;
