--- a/assets/css/header/header.css
+++ b/assets/css/header/header.css
@@ -32,7 +32,7 @@ body{
   margin-left:13%;
   margin-top: -5%;
   padding-top: 15%;
-  
+
 
 }
 
@@ -121,4 +121,53 @@ body{
 
 .display{
   display:none;
+}
+
+#seccion-header{
+ /*position: relative;*/
+ bottom: 5px;
+ /*z-index: -1;*/
+ background-image: linear-gradient(to bottom, #6b1d86, #6b1d86 60%, #2e1e67);
+ width: 100%;
+ height: 16.5%;
+}
+.contenedor-Parrafos{
+ position: relative;
+ width: 50%;
+ height: 850px;
+ margin-left:10%;
+ padding-top: 10%;
+ padding-bottom: 30%;
+ float: left;
+ color: white;
+}
+ .contenedor-Parrafos p{
+ color: white;
+ width: 100%;
+ font-size: 1.3em;
+ font-stretch: ultra-condensed;
+ font-family: 'Roboto', sans-serif;
+ margin-bottom: 10%;
+
+}
+.contenedor-Parrafos h3{
+  font-family: Helvetica;
+  font-size: 25px;
+  padding-right: 10%;
+
+}
+.ultimoParrafoHeader{
+  padding-bottom: 20%;
+}
+ .contenedor-phone{
+ position: relative;
+ width: 50%;
+ height: 1000px;
+ margin-left: 50%;
+ padding-top: 30%;
+}
+
+ .fotoPhone{
+ padding-top: 100px;
+ height: 400px;
 }
